@@ -694,9 +694,7 @@ view.status.io=I/O: {0} operations in progress
 view.status.io-1=I/O: 1 operation in progress
 view.status.io.done=Input/output complete
 view.status.caret-tooltip=Line and column number indicator
-view.status.mode-tooltip=Current edit mode
-view.status.encoding-tooltip=Current encoding
-view.status.fold-tooltip=Fold mode (click to change)
+view.status.mode-tooltip=Current edit mode, fold mode, and encoding
 view.status.multi-tooltip=Multiple selection indicator (click to change)
 view.status.overwrite-tooltip=Overwrite/insert mode indicator (click to change)
 view.status.memory-tooltip=Java heap memory: {0}Kb/{1}Kb
